# nb_gpu_trainer

./: .gitignore  README.md  evaluate_model-v3.6-92M.ipynb  evaluate_model.ipynb  evaluate_model_100m.ipynb  evaluate_model_2.1_v1.0.ipynb  evaluate_model_40m-10k-v1.ipynb  evaluate_model_40m-3-models.ipynb  evaluate_model_v2.3.1.ipynb  evaluate_model_v2.8.ipynb  evaluate_model_v2.9.2.ipynb  evaluate_model_v2.9.ipynb  gdown.ipynb  gdown_fw2.ipynb  plot_mup.ipynb  pyproject.toml  tiny_stories_dataset.ipynb  tokenize_news_tr.ipynb  tokenize_tinystories.ipynb
config/: news_model.yml  news_trainer.yml
ddp-test-gpu/: config.json  trainer.json
ddp-test-gpu-2/: trainer.json
notebooks/: demo.ipynb  generate_from_demo.ipynb  generate_new_dataset.ipynb  hf_save_tests.ipynb  teokenize.ipynb  test-import.ipynb  tokenizer.ipynb  train.ipynb  train_news_90k.ipynb  train_tokenizer.ipynb  train_wikitr_tokenizer.ipynb  transform-news-90k-dataset-futbol.ipynb  transform-news-90k-dataset-sirkethaberleri.ipynb  transform-news-90k-dataset.ipynb
scripts/: run_mup.sh  run_sp.sh
src/: generate.py  hf_backed_trainer.py  trainer.py
src/model/: config_custom.py  gpt2.py  model_custom.py
src/nbtr/: cli_copy_tokenizer.py  cli_generate_data.py  cli_generate_data_stream.py  cli_generate_data_tiktoken.py  cli_hf_train.py  cli_train.py  cli_train_tokenizer.py  decoder.py  generate.py  hf_backed_trainer.py  trainer.py
src/nbtr/data/: create.py  data_common.py  ddl.py  ddl_gdown.py  test_ddl.py  test_ddl_gdown.py  test_ddl_gdown_single_file.py
src/tokenizer/: tokenizer.py  train.py
(+29 files in other folders)
