[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nb_gpu_trainer" 
version = "1.0"
# requires-python = ">= 3.10"
dependencies = [
  'transformers',
  'datasets',
  'huggingface_hub',
#  'torch',
#  'numpy',
  'sentencepiece',
#  'wandb',
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]